Changelog
=========


2.0.2 (unreleased)
------------------

- Nothing changed yet.


2.0.1 (2014-10-27)
------------------

- Harmonize column lengths of groupid and userid columns.
  [phgross]


2.0.0 (2014-10-24)
------------------

- Add `abbreviation` column to admin_unit table.
  [phgross]

- Add OGDSService which provides an entry point to query data.
  [phgross, deiferni]

- Add `OrgUnit` and `AdminUnit` model definitions, `OrgUnit` replaces `Client`.
  [phgross, deiferni]

- Move some functionality from `opengever.core` utility functions to methds on our model classes for better encapsulation.
  [phgross, deiferni]

- Add common base-class with query helper methods for all models.
  [phgross, deiferni]

- Add `ftw.builder` SQL-Builders for all model classes.
  [phgross, deiferni]


1.0.3 (2014-06-05)
------------------

- Fixed backref name of the groups_user join table.
  [phgross]


1.0.2 (2014-02-18)
------------------

- Fixed include in MANIFEST that caused previous brown bag release.
  [lknoepfel]


1.0.1 (2013-12-15)
------------------

- Moved package to GitHub.
  [lknoepfel]

- Added helper function `alter_column_length` (used by upgrade steps in og.core).
  [lgraf]

- Increased lengths for `userid` and `groupid` columns to 255.
  [lgraf]

- Dropped Plone 4.1 compatibility. Only 4.2 and up are supported.
  [lgraf]


1.0 (2011-11-17)
----------------

- Final release
  [phgross]


1.0a2 (2011-10-04)
------------------

- added manifest.in


1.0a1 (2011-09-29)
------------------

- Initial release